# Colossus_LTSM

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
extras/desktop/: colossus.desktop
extras/docs/: CHANGELOG.md  README_glyph_help.md
extras/ttf/: my_font_file.hpp
extras/ttf/untested/: my_font_file.hpp
src/colossus_ltsm/: __init__.py  colossus_main.py  font_converter.py  font_viewer.py  settings.py
tests/: test_font_converter.py  test_font_viewer.py  test_settings.py
